# jsonapi

./: Cargo.toml
examples/: Cargo.toml
examples/src/: lib.rs
jsonapi_resource_derive/: Cargo.toml
jsonapi_resource_derive/src/: lib.rs
src/: lib.rs
