[package]
name = "jsonapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version="4", optional=true}
serde = "1"
serde_derive = "1"
serde_json = "1"
futures-core = "0.3"
uuid = "1.2.1"

