[package]
name = "examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonapi = { path = "../"}
serde = "1"
serde_json = "1"
serde_derive = "1"
jsonapi_resource_derive = { git = "https://github.com/qmuloadmin/jsonapi" }

[dependencies.uuid]
version = "1.0.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
	"serde"
]