[package]
name = "jsonapi_resource_derive"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = "2"
quote = "1.0"
darling = "0.20"
proc-macro2 = "1.0.38"
jsonapi = { git = "https://github.com/qmuloadmin/jsonapi", default-features=false}
